chore: not working, breaks whole network
